--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@types/react": "16.8.17",
     "@types/react-dom": "16.8.4",
     "backbone": "^1.4.0",
+    "bootstrap": "^4.3.1",
     "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "typescript": "3.4.5"
