Updated package, google analytics.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "up71.me",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "@types/google.analytics": "0.0.40",
     "@types/jest": "24.0.13",
     "@types/node": "12.0.2",
     "@types/react": "16.8.17",
@@ -37,5 +38,23 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This is the source code for up71.me a website that provides simple, easy to use, clear SLA calculations.  While not particulary interesting or advanced it does provide a test bed for learning and trying things out.  This project leverages React, Typescript, Create React App, moment.js, and react-bootstrap.  Moment.js is very good and provided the key conversions to and from durations.  I have used moment.js for many projects and highly recommend it.",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TedMN/up71.me.git"
+  },
+  "keywords": [
+    "sla",
+    "uptime",
+    "downtime"
+  ],
+  "author": "Ted Johnson",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/TedMN/up71.me/issues"
+  },
+  "homepage": "https://up71.me/"
 }
