Set short name and name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "up71.me",
+  "name": "up71.me SLA calculator",
   "icons": [
     {
       "src": "favicon.ico",
